#new-task_form display: flex property added so all of the text in the placeholder is now showing on the browser. Previously, some of the text was cut off in the input field

--- a/main.css
+++ b/main.css
@@ -43,6 +43,10 @@ input, button {
     background: none;
 }
 
+#new-task-form {
+    display: flex;
+}
+
 #new-task-input {
     flex: 1 1 0%;
     background-color: var(--darker);
